--- a/src/Thermavip/Thermavip_resource.rc
+++ b/src/Thermavip/Thermavip_resource.rc
@@ -3,8 +3,8 @@
 IDI_ICON1	ICON	DISCARDABLE	"Thermavip.ico"
 
 VS_VERSION_INFO VERSIONINFO
-	FILEVERSION 3,6,0,0
-	PRODUCTVERSION 3,6,0,0
+	FILEVERSION 5,0,0,0
+	PRODUCTVERSION 5,0,0,0
 	FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
 	FILEFLAGS VS_FF_DEBUG
@@ -19,13 +19,13 @@ VS_VERSION_INFO VERSIONINFO
 		BEGIN
 			BLOCK "040904b0"
 			BEGIN
-				VALUE "CompanyName", "Thermadiag\0"
+				VALUE "CompanyName", "CEA/IRFM\0"
 				VALUE "FileDescription", "Thermavip software\0"
-				VALUE "FileVersion", "4.2.0.0\0"
-				VALUE "LegalCopyright", "Copyright (C) 2015-2023\0"
+				VALUE "FileVersion", "5.0.0.0\0"
+				VALUE "LegalCopyright", "Copyright (C) 2015-2025\0"
 				VALUE "OriginalFilename", "Thermavip.exe\0"
 				VALUE "ProductName", "Thermavip\0"
-				VALUE "ProductVersion", "4.2.0.0\0"
+				VALUE "ProductVersion", "5.0.0.0\0"
 			END
 		END
 		BLOCK "VarFileInfo"
