--- a/cmake/thermavipConfig.cmake.in
+++ b/cmake/thermavipConfig.cmake.in
@@ -84,6 +84,14 @@ else()
 	set(THERMAVIP_VTK_LIBRARIES "")
 endif()
 
+if(@HAS_HDF5@)
+	find_package (HDF5 COMPONENTS C REQUIRED)
+	set(THERMAVIP_HDF5_LIBRARIES ${HDF5_LIBRARIES}})
+	include_directories(${HDF5_INCLUDE_DIRS})
+else()
+	set(THERMAVIP_HDF5_LIBRARIES "")
+endif()
+
 if("@QT_WEBENGINE_LIBS@")
 	add_compile_definitions(__VIP_USE_WEB_ENGINE)
 endif()
