updated build files. Corrected potential crash on Player closing.

--- a/src/Plugins/Ffmpeg/CMakeLists.txt
+++ b/src/Plugins/Ffmpeg/CMakeLists.txt
@@ -28,7 +28,7 @@ target_compile_definitions(Ffmpeg PRIVATE ENABLE_H264 BUILD_FFMPEG_LIB)
 # Configure ffmpeg path, use librir ffmpeg install if possible
 IF(WITH_LIBRIR)
 	if(MSVC)
-		set(FFMPEG_PATH ${CMAKE_BINARY_DIR}/src/Annotation/librir-prefix/src/librir/3rd_64)
+		set(FFMPEG_PATH ${CMAKE_BINARY_DIR}/src/Annotation/librir-prefix/src/librir/extra/ffmpeg)
 	else()
 		set(FFMPEG_PATH ${CMAKE_BINARY_DIR}/src/Annotation/librir-prefix/src/librir-build/install)
 	endif()
@@ -42,7 +42,7 @@ IF (MSVC)
 
 
 	SET(FFMPEG_LIB_DIR ${FFMPEG_PATH}/ffmpeg-4.3-msvc/lib)
-	SET(FFMPEG_INCLUDE_DIR ${FFMPEG_PATH}/ffmpeg-4.3-msvc)
+	SET(FFMPEG_INCLUDE_DIR ${FFMPEG_PATH}/ffmpeg-4.3-msvc/include)
 	SET(FFMPEG_LIBS avdevice avformat avcodec swscale avutil swresample avfilter )
 	SET(ADDITIONAL_FFMPEG_LIBS libx264 libx265 kvazaar postproc vcruntime140_1 Vfw32 shlwapi strmbase)
 	SET(FFMPEG_PREFIX )
