format and use FetchContent for librir dependency

--- a/src/Annotation/CMakeLists.txt
+++ b/src/Annotation/CMakeLists.txt
@@ -13,16 +13,15 @@ include(FetchContent)
 FILE(GLOB Sources *.cpp)
 FILE(GLOB Headers *.h)
 add_library(VipAnnotation SHARED
-    ${Sources} ${Headers}
+	${Sources} ${Headers}
 )
 
 target_include_directories(VipAnnotation PRIVATE
-    ${PROJECT_SOURCE_DIR}/../Logging ${PROJECT_SOURCE_DIR}/../DataType ${PROJECT_SOURCE_DIR}/../Core ${PROJECT_SOURCE_DIR}/../Plotting ${PROJECT_SOURCE_DIR}/../Gui
+	${PROJECT_SOURCE_DIR}/../Logging ${PROJECT_SOURCE_DIR}/../DataType ${PROJECT_SOURCE_DIR}/../Core ${PROJECT_SOURCE_DIR}/../Plotting ${PROJECT_SOURCE_DIR}/../Gui
 )
 
-
 target_compile_definitions(VipAnnotation PRIVATE
-    VIP_BUILD_ANNOTATION_LIB
+	VIP_BUILD_ANNOTATION_LIB
 )
 
 target_link_libraries(VipAnnotation PRIVATE
@@ -37,87 +36,90 @@ target_link_libraries(VipAnnotation PRIVATE
 set(TARGET_PROJECT VipAnnotation)
 include(${THERMAVIP_COMPILER_FLAGS_FILE})
 
-
 # Configure Librir
 
 # if(WITH_LIBRIR)
-# 	if(NOT librir_FOUND)
-# 		FetchContent_Declare(
-# 			librir
-# 			GIT_REPOSITORY
-# 			https://github.com/IRFM/librir.git
-# 			GIT_TAG         main
-# 			OVERRIDE_FIND_PACKAGE 
-# 		)
-# 		#FetchContent_GetProperties(librir)
-		
-# 			# Fetch the content using previously declared details
-# 			FetchContent_Populate(librir)
-# 		FetchContent_MakeAvailable(librir)
-# 		#install(DIRECTORY ${CMAKE_BINARY_DIR}/src/Annotation/librir-prefix/src/librir-build/install/python/librir DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip")
-# 	endif()
+# if(NOT librir_FOUND)
+# FetchContent_Declare(
+# librir
+# GIT_REPOSITORY
+# https://github.com/IRFM/librir.git
+# GIT_TAG         main
+# OVERRIDE_FIND_PACKAGE
+# )
+# #FetchContent_GetProperties(librir)
+
+# # Fetch the content using previously declared details
+# FetchContent_Populate(librir)
+# FetchContent_MakeAvailable(librir)
+# #install(DIRECTORY ${CMAKE_BINARY_DIR}/src/Annotation/librir-prefix/src/librir-build/install/python/librir DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip")
 # endif()
-
-
+# endif()
 IF(WITH_LIBRIR)
-	include(ExternalProject)
-	
-	ExternalProject_Add(librir
-	  GIT_REPOSITORY https://github.com/IRFM/librir.git
-	  GIT_TAG better-build
-	  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>
-	  INSTALL_DIR "${CMAKE_BINARY_DIR}/src/Annotation/librir-prefix/src/librir-build/install"
+	include(FetchContent)
+	FetchContent_Declare(
+		librir
+		GIT_REPOSITORY https://github.com/IRFM/librir.git
+		GIT_TAG better-build
+		OVERRIDE_FIND_PACKAGE
 	)
+	message(STATUS "fetching librir")
+	FetchContent_MakeAvailable(librir)
+
+	# include(ExternalProject)
+
+	# ExternalProject_Add(librir
+	# GIT_REPOSITORY https://github.com/IRFM/librir.git
+	# GIT_TAG better-build
+	# CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>
+	# INSTALL_DIR "${CMAKE_BINARY_DIR}/src/Annotation/librir-prefix/src/librir-build/install"
+	# )
 
 	# trick from https://stackoverflow.com/questions/17446981/cmake-externalproject-add-and-findpackage
 	# Run cmake twice to populate librirmake
 	# if(NOT ${librir_FOUND})
-	# 	#rerun cmake in initial build
-	# 	#will update cmakecache/project files on first build
-	# 	#so you may have to reload project after first build
-	# 	add_custom_target(Rescan ${CMAKE_COMMAND} ${CMAKE_SOURCE_DIR} "CMAKE_PREFIX_PATH=${CMAKE_PREFIX_PATH}" ${CMAKE_ARGS} DEPENDS librir)
+	# #rerun cmake in initial build
+	# #will update cmakecache/project files on first build
+	# #so you may have to reload project after first build
+	# add_custom_target(Rescan ${CMAKE_COMMAND} ${CMAKE_SOURCE_DIR} "CMAKE_PREFIX_PATH=${CMAKE_PREFIX_PATH}" ${CMAKE_ARGS} DEPENDS librir)
 	# else()
-	# 	#Rescan becomes a dummy target after first build
-	# 	#this prevents cmake from rebuilding cache/projects on subsequent builds
-	# 	add_custom_target(Rescan)
+	# #Rescan becomes a dummy target after first build
+	# #this prevents cmake from rebuilding cache/projects on subsequent builds
+	# add_custom_target(Rescan)
 	# endif()
 
-	
 	# if(${librir_FOUND})
-	# 	add_dependencies(VipAnnotation librir)
+	# add_dependencies(VipAnnotation librir)
 	# else()
-	# 	add_dependencies(VipAnnotation Rescan)
+	# add_dependencies(VipAnnotation Rescan)
 	# endif()
-
 	add_dependencies(VipAnnotation librir)
-	#find_package(librir)
+
+	# find_package(librir)
 	install(DIRECTORY ${CMAKE_BINARY_DIR}/src/Annotation/librir-prefix/src/librir-build/install/python/librir DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip")
-	
 endif()
 
 install(TARGETS VipAnnotation
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} 
+	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
 	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    FRAMEWORK DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+	FRAMEWORK DESTINATION ${CMAKE_INSTALL_LIBDIR}
+	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 install(TARGETS VipAnnotation
-    LIBRARY DESTINATION "${THERMAVIP_APPLICATION_DIR}"
-    FRAMEWORK DESTINATION "${THERMAVIP_APPLICATION_DIR}"
-    RUNTIME DESTINATION "${THERMAVIP_APPLICATION_DIR}"
+	LIBRARY DESTINATION "${THERMAVIP_APPLICATION_DIR}"
+	FRAMEWORK DESTINATION "${THERMAVIP_APPLICATION_DIR}"
+	RUNTIME DESTINATION "${THERMAVIP_APPLICATION_DIR}"
 )
 install(TARGETS VipAnnotation
 	LIBRARY DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
-    FRAMEWORK DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
-    RUNTIME DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
+	FRAMEWORK DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
+	RUNTIME DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
 )
 install(TARGETS VipAnnotation
 	LIBRARY DESTINATION "${THERMAVIP_TEST_DIR}"
-    FRAMEWORK DESTINATION "${THERMAVIP_TEST_DIR}"
-    RUNTIME DESTINATION "${THERMAVIP_TEST_DIR}"
+	FRAMEWORK DESTINATION "${THERMAVIP_TEST_DIR}"
+	RUNTIME DESTINATION "${THERMAVIP_TEST_DIR}"
 )
-
-
 
 file(GLOB HEADER_FILES ${PROJECT_SOURCE_DIR}/*.h)
 install(FILES ${HEADER_FILES} DESTINATION "${CMAKE_INSTALL_PREFIX}/include/VipAnnotation/")
