--- a/src/Annotation/CMakeLists.txt
+++ b/src/Annotation/CMakeLists.txt
@@ -103,7 +103,7 @@ IF(WITH_LIBRIR)
 	# else()
 	# add_dependencies(VipAnnotation Rescan)
 	# endif()
-	add_dependencies(VipAnnotation librir)
+	add_dependencies(VipAnnotation librir::video_io)
 
 	# find_package(librir)
 	# install(DIRECTORY ${CMAKE_BINARY_DIR}/src/Annotation/librir-prefix/src/librir-build/install/python/librir DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip")
