--- a/src/Plugins/Ffmpeg/CMakeLists.txt
+++ b/src/Plugins/Ffmpeg/CMakeLists.txt
@@ -26,12 +26,14 @@ target_compile_definitions(Ffmpeg PRIVATE ENABLE_H264 BUILD_FFMPEG_LIB)
 
 
 # Configure ffmpeg path, use librir ffmpeg install if possible
-IF(WITH_LIBRIR)
+if(WITH_LIBRIR)
 	if(MSVC)
 		set(FFMPEG_PATH ${CMAKE_BINARY_DIR}/_deps/librir-src/extra/ffmpeg)
 	else()
 		# TODO! Linux
-		set(FFMPEG_PATH ${CMAKE_BINARY_DIR}/src/Annotation/librir-prefix/src/librir-build/install)
+		# set(FFMPEG_PATH ${CMAKE_BINARY_DIR}/src/Annotation/librir-prefix/src/librir-build/install)
+		# Compile ffmpeg from source inside 3rd_64 folder
+		set(FFMPEG_PATH ${CMAKE_SOURCE_DIR}/3rd_64)
 	endif()
 else()
 	# Compile ffmpeg from source inside 3rd_64 folder
@@ -40,33 +42,29 @@ endif()
 
 
 
-IF (MSVC)
-	SET(FFMPEG_LIB_DIR ${FFMPEG_PATH}/ffmpeg-4.3-msvc/lib)
-	SET(FFMPEG_INCLUDE_DIR "${FFMPEG_PATH}/ffmpeg-4.3-msvc/include;${FFMPEG_PATH}/ffmpeg-4.3-msvc")
-	SET(FFMPEG_LIBS avdevice avformat avcodec swscale avutil swresample avfilter )
-	SET(ADDITIONAL_FFMPEG_LIBS libx264 libx265 kvazaar postproc vcruntime140_1 Vfw32 shlwapi strmbase)
-	SET(FFMPEG_PREFIX )
-	SET(FFMPEG_SUFFIX .dll)
-ELSE()
-
-	IF (WIN32)
+if (MSVC)
+	set(FFMPEG_LIB_DIR ${FFMPEG_PATH}/ffmpeg-4.3-msvc/lib)
+	set(FFMPEG_INCLUDE_DIR "${FFMPEG_PATH}/ffmpeg-4.3-msvc/include;${FFMPEG_PATH}/ffmpeg-4.3-msvc")
+	set(FFMPEG_LIBS avdevice avformat avcodec swscale avutil swresample avfilter )
+	set(ADDITIONAL_FFMPEG_LIBS libx264 libx265 kvazaar postproc vcruntime140_1 Vfw32 shlwapi strmbase)
+	set(FFMPEG_PREFIX )
+	set(FFMPEG_SUFFIX .dll)
+else()
+	if (WIN32)
 		# mingw
-		SET(FFMPEG_LIB_DIR ${FFMPEG_PATH}/ffmpeg/install/lib)
-		SET(FFMPEG_INCLUDE_DIR ${FFMPEG_PATH}/ffmpeg/install/include)
-		SET(FFMPEG_LIBS avdevice avformat avcodec swscale avutil swresample avfilter)
-		SET(ADDITIONAL_FFMPEG_LIBS postproc)
-		SET(FFMPEG_PREFIX )
-		SET(FFMPEG_SUFFIX .dll)
-	ELSE()
-		#SET(FFMPEG_LIB_DIR ${FFMPEG_PATH}/ffmpeg/install/lib)
-		#SET(FFMPEG_INCLUDE_DIR ${FFMPEG_PATH}/ffmpeg/install/include)
-		SET(FFMPEG_LIB_DIR ${FFMPEG_PATH}/lib)
-		SET(FFMPEG_INCLUDE_DIR ${FFMPEG_PATH}/include)
-		
-		SET(FFMPEG_LIBS avdevice avformat avcodec swscale avutil swresample avfilter)
-		SET(ADDITIONAL_FFMPEG_LIBS postproc)
-		SET(FFMPEG_PREFIX lib)
-		SET(FFMPEG_SUFFIX .so)
+		set(FFMPEG_LIB_DIR ${FFMPEG_PATH}/ffmpeg/install/lib)
+		set(FFMPEG_INCLUDE_DIR ${FFMPEG_PATH}/ffmpeg/install/include)
+		set(FFMPEG_LIBS avdevice avformat avcodec swscale avutil swresample avfilter)
+		set(ADDITIONAL_FFMPEG_LIBS postproc)
+		set(FFMPEG_PREFIX )
+		set(FFMPEG_SUFFIX .dll)
+	else()
+		set(FFMPEG_LIB_DIR ${FFMPEG_PATH}/ffmpeg/install/lib)
+		set(FFMPEG_INCLUDE_DIR ${FFMPEG_PATH}/ffmpeg/install/include)
+		set(FFMPEG_LIBS avdevice avformat avcodec swscale avutil swresample avfilter)
+		set(ADDITIONAL_FFMPEG_LIBS postproc)
+		set(FFMPEG_PREFIX lib)
+		set(FFMPEG_SUFFIX .so)
 	ENDIF()
 ENDIF()
 
@@ -76,7 +74,7 @@ MESSAGE(STATUS "Using ${FFMPEG_LIB_DIR} for ffmpeg library files")
 
 target_include_directories(Ffmpeg PRIVATE ${FFMPEG_INCLUDE_DIR})
 target_link_libraries(Ffmpeg PRIVATE ${FFMPEG_LIBS})
-SET(COMPLETE_FFMPEG_LIBS ${FFMPEG_LIBS} ${ADDITIONAL_FFMPEG_LIBS})
+set(COMPLETE_FFMPEG_LIBS ${FFMPEG_LIBS} ${ADDITIONAL_FFMPEG_LIBS})
 
 
 # Add any variables you need during post install.
