Updated files for find_package(thermavip)

--- a/cmake/thermavipConfig.cmake.in
+++ b/cmake/thermavipConfig.cmake.in
@@ -13,9 +13,7 @@ ELSE()
 	set_and_check(THERMAVIP_LIB_DIR ${PACKAGE_PREFIX_DIR}/lib)
 ENDIF()
 
-IF(${BITS} MATCHES "64" AND UNIX)
-	set_and_check(THERMAVIP_BIN_DIR ${PACKAGE_PREFIX_DIR}/bin64)
-ELSE()
+IF(WIN32)
 	set_and_check(THERMAVIP_BIN_DIR ${PACKAGE_PREFIX_DIR}/bin)
 ENDIF()
 
@@ -41,7 +39,7 @@ set(CMAKE_AUTOMOC ON)
 
 
 if(${QT_VERSION_MAJOR} LESS 6)
-set(THERMAVIP_QT_LIBRARIES_NO_WEBENGINE Qt5::Core
+set(THERMAVIP_QT_LIBRARIES_NO_GUI Qt5::Core
     Qt5::Gui
     Qt5::Network
 	Qt5::Widgets
@@ -53,7 +51,7 @@ set(THERMAVIP_QT_LIBRARIES_NO_WEBENGINE Qt5::Core
 	@QT_ADDITIONAL_LIBS@
 	)
 else()
-set(THERMAVIP_QT_LIBRARIES_NO_WEBENGINE Qt::Core
+set(THERMAVIP_QT_LIBRARIES_NO_GUI Qt::Core
     Qt::Gui
     Qt::Network
 	Qt::Widgets
@@ -68,7 +66,17 @@ set(THERMAVIP_QT_LIBRARIES_NO_WEBENGINE Qt::Core
 	)
 endif()
 
-set(THERMAVIP_QT_LIBRARIES "${THERMAVIP_QT_LIBRARIES_NO_WEBENGINE} @QT_WEBENGINE_LIBS@")
+if("@QT_WEBENGINE_LIBS@")
+	if(${QT_VERSION_MAJOR} LESS 6)
+		set(WEB_ENGINE WebEngine)
+	else()
+		set(WEB_ENGINE WebEngineCore)
+	endif()
+	find_package(Qt${QT_VERSION_MAJOR} ${WEB_ENGINE})
+	find_package(Qt${QT_VERSION_MAJOR} WebEngineWidgets )
+	set(THERMAVIP_QT_LIBRARIES ${THERMAVIP_QT_LIBRARIES_NO_GUI})
+	list(APPEND THERMAVIP_QT_LIBRARIES @QT_WEBENGINE_LIBS@)
+endif()
 
 
 #VTK
