put back webcam display

--- a/src/Gui/CMakeLists.txt
+++ b/src/Gui/CMakeLists.txt
@@ -43,7 +43,11 @@ target_compile_definitions(VipGui PRIVATE
 )
 
 if(WITH_PYTHON)
-	target_compile_definitions(VipGui PRIVATE VIP_WITH_PYTHON)
+	target_compile_definitions(VipGui PUBLIC VIP_WITH_PYTHON)
+endif()
+
+if(WITH_FFMPEG)
+	target_compile_definitions(VipGui PUBLIC VIP_WITH_FFMPEG)
 endif()
 
 
