--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,7 +22,7 @@ jobs:
     build-windows:
         strategy:
           matrix:
-            compiler: [ msvc, clang]
+            compiler: [ msvc]
         uses: ./.github/workflows/build-windows.yml
         with:
           compiler: ${{ matrix.compiler }}
