updated qt webengine pfind package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -167,18 +167,16 @@ find_package(Qt6 REQUIRED COMPONENTS OpenGLWidgets)
 list(APPEND QT_ADDITIONAL_LIBS Qt6::Core5Compat Qt6::OpenGLWidgets)
 endif()
 
-if(WITH_WEBENGINE)
-	find_package(${WEB_ENGINE} )
-	find_package(Qt${QT_VERSION_MAJOR}WebEngineWidgets )
-	if (${WEB_ENGINE}_FOUND)
-		if (${WEB_ENGINE}_VERSION VERSION_LESS 5.15.0)
-		else()
-			find_package(Qt${QT_VERSION_MAJOR}WebEngineWidgets REQUIRED)
-			if(${QT_VERSION_MAJOR} LESS 6)
-			list(APPEND QT_WEBENGINE_LIBS Qt5::WebEngine Qt5::WebEngineWidgets)
-			else()
+if(NOT ${QT_VERSION_MAJOR} LESS 6)
+	if(WITH_WEBENGINE)
+		find_package(Qt6 QUIET COMPONENTS WebEngineCore)
+		find_package(Qt6 QUIET COMPONENTS WebEngineWidgets )
+		set(WEB_ENGINE Qt6WebEngineCore)
+		if (${WEB_ENGINE}_FOUND)
 			list(APPEND QT_WEBENGINE_LIBS Qt::WebEngineCore Qt::WebEngineWidgets)
-			endif()
+			message(STATUS "Build Thermavip with WebEngine support!")
+		else()
+			message(WARNING "Build Thermavip without WebEngine support even if WEB_ENGINE is ON!")
 		endif()
 	endif()
 endif()
