--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -10,13 +10,13 @@ on:
 
 
 jobs: 
-    #build-linux:
-    #    strategy:
-    #      matrix:
-    #        compiler: [ latest, gcc-latest, clang, gcc-6.4.0, gcc-13.2.0]
-    #    uses: ./.github/workflows/build-linux.yml
-    #    with:
-    #      compiler: ${{ matrix.compiler }}
+    build-linux:
+        strategy:
+          matrix:
+            compiler: [gcc-latest]
+        uses: ./.github/workflows/build-linux.yml
+        with:
+          compiler: ${{ matrix.compiler }}
 
         
     build-windows:
