--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -13,7 +13,7 @@ jobs:
     build-linux:
         strategy:
           matrix:
-            compiler: [gcc-latest]
+            compiler: [gcc-13.2.0]
         uses: ./.github/workflows/build-linux.yml
         with:
           compiler: ${{ matrix.compiler }}
@@ -27,3 +27,10 @@ jobs:
         with:
           compiler: ${{ matrix.compiler }}
       
+    build-macos:
+        strategy:
+          matrix:
+            compiler: [clang]
+        uses: ./.github/workflows/build-macos.yml
+        with:
+          compiler: ${{ matrix.compiler }}
