--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,12 +24,11 @@ include(GNUInstallDirs)
 # Global options
 option(LOCAL_INSTALL "Install locally" OFF)
 option(WITH_LONG_DOUBLE "Use long double as the default type for 2D point representation" OFF)
-option(WITH_FFMEG "Build ffmpeg plugin" OFF)
-option(WITH_HDF5 "Build HDF5 plugin" OFF)
+option(WITH_FFMEG "Build ffmpeg support" OFF)
+option(WITH_HDF5 "Build HDF5 support" OFF)
 option(WITH_PYTHON "Build Python support" OFF)
 option(WITH_WEBENGINE "Build components based on Qt webengine module (if webengine is available)" ON)
 option(WITH_VTK "Build VTK support" OFF)
-option(WITH_HDF5 "Build HDF5 support" OFF)
 option(WITH_LIBRIR "Build and install librir" OFF)
 option(WITH_EXAMPLES "Build examples" ON)
 option(WITH_TESTS "Build tests" ON)
@@ -49,7 +48,6 @@ if(LOCAL_INSTALL)
 		
 		set(CMAKE_SKIP_BUILD_RPATH FALSE)
 		set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
-		#~ set(CMAKE_INSTALL_RPATH_USE_ORIGIN TRUE)
 		set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 	endif()
 endif()
@@ -62,14 +60,11 @@ if (UNIX)
 endif()
 
 if (NOT MSVC)
-#if(NOT WITH_LIBRIR)
-# Create a dummy target to build ffmpeg as a prebuild step
-#add_custom_target(ffmpeg BYPRODUCTS "${PROJECT_SOURCE_DIR}/build_ffmpeg.h"
-#  COMMAND ${PROJECT_SOURCE_DIR}/configure_ffmpeg)
-#add_executable(dummy ${PROJECT_SOURCE_DIR}/dummy.c "${PROJECT_SOURCE_DIR}/build_ffmpeg.h")
-#target_include_directories(dummy PRIVATE "${PROJECT_SOURCE_DIR}")
-add_custom_target(ffmpeg_build ALL COMMAND ${PROJECT_SOURCE_DIR}/configure_ffmpeg)
-#endif()
+	if(WITH_FFMPEG)
+		if(UNIX AND NOT APPLE)
+			add_custom_target(ffmpeg_build ALL COMMAND ${PROJECT_SOURCE_DIR}/configure_ffmpeg)
+		endif()
+	endif()
 endif()
 
 
