--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -25,9 +25,16 @@ jobs:
         
         steps:
         - uses: actions/checkout@v4
-
-        - name: Install Qt
-          uses: jurplel/install-qt-action@v4
+        
+        -   name: Install Qt
+            uses: WillBrennan/yaqti
+            with:
+                version: '6.2.0'
+                host: 'mac'
+                target: 'desktop'
+                modules: 'qtwebengine'
+        #- name: Install Qt
+        #  uses: jurplel/install-qt-action@v4
 
         - name: Build on MacOS
           run: |
