--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -36,7 +36,7 @@ jobs:
           run: |
               mkdir build 
               cd build 
-              cmake .. -DCMAKE_BUILD_TYPE=Debug -DNO_WARNINGS=ON -DWITH_FFMPEG=OFF -DLOCAL_INSTALL=ON 
+              cmake .. -DCMAKE_BUILD_TYPE=Debug -DNO_WARNINGS=ON -DWITH_PYTHON=ON -DWITH_FFMPEG=OFF -DLOCAL_INSTALL=ON 
               make -j8 
               cmake --build . --target install
           shell: bash
