--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -26,13 +26,8 @@ jobs:
         steps:
         - uses: actions/checkout@v4
         
-        - name: Install Qt
-          uses: WillBrennan/yaqti
-          with:
-            version: '6.2.0'
-            host: 'mac'
-            target: 'desktop'
-            modules: 'qtwebengine'
+        - name: install qt6 
+          run: brew install qt6
         #- name: Install Qt
         #  uses: jurplel/install-qt-action@v4
 
