--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -28,6 +28,9 @@ jobs:
 
         - name: Install Qt
           uses: jurplel/install-qt-action@v4
+          
+        - name: install numpy
+          run: pip install numpy
 
         - name: Build on Windows
           run: |
