--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -34,12 +34,15 @@ jobs:
           
         - name: install numpy
           run: pip install numpy
+          
+        - name: install HDF5
+          run: sudo apt install libhdf5-serial-dev
 
         - name: Build on Linux
           run: |
               mkdir build 
               cd build 
-              cmake .. -DCMAKE_BUILD_TYPE=Debug -DNO_WARNINGS=ON -DWITH_PYTHON=ON -DWITH_FFMPEG=OFF -DLOCAL_INSTALL=ON 
+              cmake .. -DCMAKE_BUILD_TYPE=Debug -DNO_WARNINGS=ON -DWITH_PYTHON=ON -DWITH_HDF5 -DWITH_FFMPEG=OFF -DLOCAL_INSTALL=ON 
               make -j8 
               cmake --build . --target install
           shell: bash
