--- a/src/Core/CMakeLists.txt
+++ b/src/Core/CMakeLists.txt
@@ -123,23 +123,23 @@ if(WITH_FFMPEG)
 		set(FFMPEG_PREFIX )
 		set(FFMPEG_SUFFIX .dll)
 	else()
+		set(FFMPEG_LIB_DIR ${FFMPEG_PATH}/ffmpeg/install/lib)
+		set(FFMPEG_INCLUDE_DIR ${FFMPEG_PATH}/ffmpeg/install/include)
+		set(FFMPEG_LIBS avdevice avformat avcodec swscale avutil swresample avfilter)
+		set(ADDITIONAL_FFMPEG_LIBS postproc)
 		if (WIN32)
 			# mingw
-			set(FFMPEG_LIB_DIR ${FFMPEG_PATH}/ffmpeg/install/lib)
-			set(FFMPEG_INCLUDE_DIR ${FFMPEG_PATH}/ffmpeg/install/include)
-			set(FFMPEG_LIBS avdevice avformat avcodec swscale avutil swresample avfilter)
-			set(ADDITIONAL_FFMPEG_LIBS postproc)
 			set(FFMPEG_PREFIX )
 			set(FFMPEG_SUFFIX .dll)
-		else()
-			set(FFMPEG_LIB_DIR ${FFMPEG_PATH}/ffmpeg/install/lib)
-			set(FFMPEG_INCLUDE_DIR ${FFMPEG_PATH}/ffmpeg/install/include)
-			set(FFMPEG_LIBS avdevice avformat avcodec swscale avutil swresample avfilter)
-			set(ADDITIONAL_FFMPEG_LIBS postproc)
+		elseif(APPLE)
+			set(FFMPEG_PREFIX lib)
+			set(FFMPEG_SUFFIX .dylib)
+		elseif()
+			# UNIX
 			set(FFMPEG_PREFIX lib)
 			set(FFMPEG_SUFFIX .so)
-		ENDIF()
-	ENDIF()
+		endif()
+	endif()
 
 	target_link_directories(VipCore PRIVATE ${FFMPEG_LIB_DIR})
 	MESSAGE(STATUS "Using ${FFMPEG_LIB_DIR} for ffmpeg library files")
