Apple/clang Qt6 correction

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -10,22 +10,22 @@ on:
 
 
 jobs: 
-    build-linux:
-        strategy:
-          matrix:
-            compiler: [gcc-13.2.0]
-        uses: ./.github/workflows/build-linux.yml
-        with:
-          compiler: ${{ matrix.compiler }}
+    # build-linux:
+        # strategy:
+          # matrix:
+            # compiler: [gcc-13.2.0]
+        # uses: ./.github/workflows/build-linux.yml
+        # with:
+          # compiler: ${{ matrix.compiler }}
 
         
-    build-windows:
-        strategy:
-          matrix:
-            compiler: [ msvc]
-        uses: ./.github/workflows/build-windows.yml
-        with:
-          compiler: ${{ matrix.compiler }}
+    # build-windows:
+        # strategy:
+          # matrix:
+            # compiler: [ msvc]
+        # uses: ./.github/workflows/build-windows.yml
+        # with:
+          # compiler: ${{ matrix.compiler }}
       
     build-macos:
         strategy:
