clang correction,  correction in cmake files

--- a/cmake/thermavipConfig.cmake.in
+++ b/cmake/thermavipConfig.cmake.in
@@ -13,14 +13,14 @@ ELSE()
 	set_and_check(THERMAVIP_LIB_DIR ${PACKAGE_PREFIX_DIR}/lib)
 ENDIF()
 
-IF(WIN32)
-	set_and_check(THERMAVIP_BIN_DIR ${PACKAGE_PREFIX_DIR}/bin)
-ENDIF()
+#IF(WIN32)
+#	set_and_check(THERMAVIP_BIN_DIR ${PACKAGE_PREFIX_DIR}/bin)
+#ENDIF()
 
 set_and_check(THERMAVIP_APPLICATION_DIR ${PACKAGE_PREFIX_DIR}/thermavip)
-set_and_check(THERMAVIP_ICON_DIR ${PACKAGE_PREFIX_DIR}/icons)
-set_and_check(THERMAVIP_SKIN_DIR ${PACKAGE_PREFIX_DIR}/skins)
-set_and_check(THERMAVIP_PLUGIN_DIR ${PACKAGE_PREFIX_DIR}/thermavip/VipPlugins)
+set_and_check(THERMAVIP_ICON_DIR ${THERMAVIP_APPLICATION_DIR}/icons)
+set_and_check(THERMAVIP_SKIN_DIR ${THERMAVIP_APPLICATION_DIR}/skins)
+set_and_check(THERMAVIP_PLUGIN_DIR ${THERMAVIP_APPLICATION_DIR}/VipPlugins)
 
 set(THERMAVIP_LIBRARIES_NO_GUI VipLogging VipDataType VipCore VipPlotting)
 set(THERMAVIP_LIBRARIES ${THERMAVIP_LIBRARIES_NO_GUI} VipGui VipAnnotation )
