--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -2,9 +2,9 @@ name: Build on Linux
 on: 
 
   push:
-    branches: [ "main" ]
+    branches: [ "main", "dev" ]
   pull_request:
-    branches: [ "main", "releases/**"  ]
+    branches: [ "main", "dev", "releases/**"  ]
   workflow_dispatch:
     inputs:
       compiler:
